--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"avalanche123/imagine-bundle": "dev-master",
 		"guzzle/guzzle": "dev-master",
 		"genemu/form-bundle": "2.1.x-dev",
-		"zendframework/zend-ldap" : "2.0.*"
+		"zendframework/zend-ldap" : "2.0.*",
+		"sonata-project/intl-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
