- Mise à jour composer.phar - Ajout de Sonata Admin Bundle - Création bundle AmlMediasBundle - correction twig sur la home (Dernier article / dernier album ) - ajout nouveau logo

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+aml_medias:
+    resource: "@AmlMediasBundle/Resources/config/routing.yml"
+    prefix:   /
+
 aml_evenements:
     resource: "@AmlEvenementsBundle/Controller/"
     type:     annotation
