--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "MongoBoX",
+    "name": "Aml87",
     "description": "",
     "minimum-stability": "dev",
     "autoload": {
@@ -7,25 +7,29 @@
     },
     "require": {
         "php": ">=5.3.8",
-		"symfony/symfony": "2.1.*",
-		"doctrine/orm": ">=2.2.3,<2.4-dev",
-		"doctrine/doctrine-bundle": "1.0.*",
-		"twig/extensions": "1.0.*@dev",
-		"symfony/assetic-bundle": "2.1.*",
-		"symfony/swiftmailer-bundle": "2.1.*",
-		"symfony/monolog-bundle": "2.1.*",
-		"sensio/distribution-bundle": "2.1.*",
-		"sensio/framework-extra-bundle": "2.1.*",
-		"sensio/generator-bundle": "2.1.*",
-		"jms/security-extra-bundle": "1.2.*",
-		"jms/di-extra-bundle": "1.1.*",
-		"kriswallsmith/assetic": "1.1.*@dev",
-		"dms/dms-filter-bundle": "dev-master",
-		"avalanche123/imagine-bundle": "dev-master",
-		"guzzle/guzzle": "dev-master",
-		"genemu/form-bundle": "2.1.x-dev",
-		"zendframework/zend-ldap" : "2.0.*",
-		"sonata-project/intl-bundle": "dev-master"
+        "symfony/symfony": "2.2.*",
+        "doctrine/orm": "2.3.*",
+        "doctrine/doctrine-bundle": "dev-master",
+        "twig/extensions": "1.0.*@dev",
+        "symfony/assetic-bundle": "2.1.*",
+        "symfony/swiftmailer-bundle": "2.2.*",
+        "symfony/monolog-bundle": "2.2.*",
+        "sensio/distribution-bundle": "2.2.*",
+        "sensio/framework-extra-bundle": "2.2.*",
+        "sensio/generator-bundle": "2.2.0",
+        "jms/security-extra-bundle": "1.4.*",
+        "jms/di-extra-bundle": "1.3.*",
+        "kriswallsmith/assetic": "1.1.*@dev",
+        "dms/dms-filter-bundle": "dev-master",
+        "avalanche123/imagine-bundle": "dev-master",
+        "genemu/form-bundle": "2.1.x-dev",
+		"sonata-project/intl-bundle": "dev-master",
+		"sonata-project/cache-bundle": "dev-master",
+        "knplabs/knp-menu-bundle": "~1.1",
+        "sonata-project/jquery-bundle": "1.8.*",
+        "sonata-project/exporter": "1.*",
+        "sonata-project/block-bundle": "2.2.*@dev",
+        "sonata-project/admin-bundle":"dev-master"
     },
     "scripts": {
         "post-install-cmd": [
