modif git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # phpstorm
-/.idea
+.idea
 
 # Bootstrap
 app/bootstrap*
@@ -14,4 +14,3 @@ web/bundles/*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
-
