--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -37,3 +37,12 @@ login_check:
 _imagine:
     resource: .
     type:     imagine
+
+admin_sonata:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin-sonata
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin-sonata
