--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "sonata-project/jquery-bundle": "1.8.*",
         "sonata-project/exporter": "1.*",
         "sonata-project/block-bundle": "2.2.*@dev",
+        "sonata-project/doctrine-orm-admin-bundle":"dev-master",
         "sonata-project/admin-bundle":"dev-master"
     },
     "scripts": {
