--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
     },
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "symfony-assets-install":"symlink"
     }
 }
