--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,6 +41,6 @@ security:
         #- { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
          - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/admin/, role: ROLE_ADMIN }
+         - { path: ^/register, role: ROLE_SUPER_ADMIN }
+         - { path: ^/resetting, role: ROLE_SUPER_ADMIN }
+         - { path: ^/admin/, role: ROLE_SUPER_ADMIN }
