- install et config Sonata

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: @AmlUsersBundle/Resources/config/admin.yml }
     - { resource: @AmlBlogBundle/Resources/config/admin.yml }
+    - { resource: @AmlWebBundle/Resources/config/admin.yml }
 
 sonata_block:
     default_contexts: [cms]
