ajout admin médias

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: @AmlUsersBundle/Resources/config/admin.yml }
     - { resource: @AmlBlogBundle/Resources/config/admin.yml }
     - { resource: @AmlWebBundle/Resources/config/admin.yml }
+    - { resource: @AmlMediasBundle/Resources/config/admin.yml }
+    - { resource: @AmlEvenementsBundle/Resources/config/admin.yml }
 
 sonata_block:
     default_contexts: [cms]
