--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,7 +18,7 @@ sonata_admin:
     title:      AML87
     templates:
         # default global templates
-        layout:  SonataAdminBundle::standard_layout.html.twig
+        layout:  AmlWebBundle::Admin/standard_layout.html.twig
         ajax:    SonataAdminBundle::ajax_layout.html.twig
 
         # default actions templates, should extend a global templates
