--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "sonata-project/block-bundle": "2.2.*@dev",
         "sonata-project/doctrine-orm-admin-bundle":"dev-master",
         "sonata-project/admin-bundle":"dev-master",
+        "sonata-project/core-bundle":"~2.2@dev",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
