31: [Medias] - manage videos from youtube

--- a/src/Aml/Bundle/MediasBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/MediasBundle/Resources/config/admin.yml
@@ -23,3 +23,14 @@ services:
         calls:
             - [ setTranslationDomain, [AmlMediasBundle]]
 
+    sonata.admin.videos:
+        class: Aml\Bundle\MediasBundle\Admin\VideoAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Medias, label: "Videos" }
+        arguments:
+            - ~
+            - Aml\Bundle\MediasBundle\Entity\Video\Youtube
+            - 'SonataAdminBundle:CRUD'
+        calls:
+            - [ setTranslationDomain, [AmlMediasBundle]]
+
