4: [ContactUs] - Contact form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,7 @@ imports:
     - { resource: @AmlWebBundle/Resources/config/admin.yml }
     - { resource: @AmlMediasBundle/Resources/config/admin.yml }
     - { resource: @AmlEvenementsBundle/Resources/config/admin.yml }
+    - { resource: @AmlContactUsBundle/Resources/config/admin.yml }
 
 
 sonata_block:
