--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+aml_contact_us:
+    resource: "@AmlContactUsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 tools_migration:
     resource: "@ToolsMigrationBundle/Resources/config/routing.yml"
     prefix:   /
