--- a/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
@@ -43,3 +43,14 @@ services:
             - 'SonataAdminBundle:CRUD'
         calls:
             - [ setTranslationDomain, [AmlWebBundle]]
+
+    sonata.admin.contactus:
+            class: Aml\Bundle\ContactUsBundle\Admin\MessageAdmin
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Formulaire de contact" }
+            arguments:
+                - ~
+                - Aml\Bundle\ContactUsBundle\Entity\Message
+                - 'SonataAdminBundle:CRUD'
+            calls:
+                - [ setTranslationDomain, [AmlContactUsBundle]]
