--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,9 +54,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
-    trust_proxy_headers: false # Whether or not the Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
     session:
-        lifetime:    10800
+        gc_maxlifetime:    10800
 
 # Twig Configuration
 twig:
