--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,23 @@
     },
     "require": {
         "php": ">=5.3.8",
-        "symfony/symfony": "2.2.*",
-        "doctrine/orm": "2.3.*",
-        "doctrine/doctrine-bundle": "dev-master",
-        "twig/extensions": "1.0.*@dev",
-        "symfony/assetic-bundle": "2.1.*",
-        "symfony/swiftmailer-bundle": "2.2.*",
-        "symfony/monolog-bundle": "2.2.*",
-        "sensio/distribution-bundle": "2.2.*",
-        "sensio/framework-extra-bundle": "2.2.*",
-        "sensio/generator-bundle": "2.2.0",
-        "jms/security-extra-bundle": "1.4.*",
-        "jms/di-extra-bundle": "1.3.*",
+        "symfony/symfony": "2.3.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "twig/extensions": "1.0.*",
+        "symfony/assetic-bundle": "2.3.*",
+        "symfony/swiftmailer-bundle": "2.3.*",
+        "symfony/monolog-bundle": "2.3.*",
+        "sensio/distribution-bundle": "2.3.*",
+        "sensio/framework-extra-bundle": "2.3.*",
+        "sensio/generator-bundle": "2.3.*",
+        "incenteev/composer-parameter-handler": "~2.0",
+        "jms/security-extra-bundle": "1.5.*",
+        "jms/di-extra-bundle": "1.4.*",
         "kriswallsmith/assetic": "1.1.*@dev",
         "dms/dms-filter-bundle": "dev-master",
         "avalanche123/imagine-bundle": "dev-master",
-        "genemu/form-bundle": "2.1.x-dev",
+        "genemu/form-bundle": "2.2.*",
 		"sonata-project/intl-bundle": "dev-master",
 		"sonata-project/cache-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "~1.1",
