42: [Console] - add bundle CoreSphereConsoleBundle

--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -20,3 +20,6 @@ _configurator:
 
 _main:
     resource: routing.yml
+
+console:
+    resource: "@CoreSphereConsoleBundle/Resources/config/routing.yml"
