--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "sonata-project/doctrine-orm-admin-bundle":"dev-master",
         "sonata-project/admin-bundle":"dev-master",
         "sonata-project/core-bundle":"~2.2@dev",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "winzou/console-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
