--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+aml_discography:
+    resource: "@AmlDiscographyBundle/Resources/config/routing.yml"
+    prefix:   /
+
 aml_contact_us:
     resource: "@AmlContactUsBundle/Resources/config/routing.yml"
     prefix:   /
@@ -57,7 +61,7 @@ admin_sonata:
 _sonata_admin:
     resource: .
     type: sonata_admin
-    prefix: /admin-sonata
+    prefix: /admin
 
 # FOS USER
 fos_user_security:
