--- a/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
@@ -12,12 +12,12 @@ services:
             - [ setTranslationDomain, [AmlWebBundle]]
 
     sonata.admin.album:
-        class: Aml\Bundle\WebBundle\Admin\AlbumAdmin
+        class: Aml\Bundle\DiscographyBundle\Admin\AlbumAdmin
         tags:
             - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Album" }
         arguments:
             - ~
-            - Aml\Bundle\WebBundle\Entity\Album
+            - Aml\Bundle\DiscographyBundle\Entity\Album
             - 'SonataAdminBundle:CRUD'
         calls:
             - [ setTranslationDomain, [AmlWebBundle]]
