--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ imports:
 
 
 sonata_block:
-    default_contexts: [cms]
+    default_contexts: [sonata_page_bundle]
     blocks:
         sonata.admin.block.admin_list:
             contexts:   [admin]
@@ -39,7 +39,20 @@ sonata_admin:
     dashboard:
         blocks:
             # display a dashboard block
-            - { position: left, type: sonata.admin.block.admin_list }
+            #- { position: left, type: sonata.admin.block.admin_list }
+             -
+                position: right
+                type: sonata.admin.block.admin_list
+             -
+                position: left
+                type: sonata.block.service.text
+                settings:
+                  content: >
+                    <h2>Welcome to the Sonata Admin</h2>
+                    <p>This is a <code>sonata.block.service.text</code> from the Block
+                    Bundle, you can create and add new block in these area by configuring
+                    the <code>sonata_admin</code> section.</p> <br /> For instance, here
+                    a RSS feed parser (<code>sonata.block.service.rss</code>):
 
 
 framework:
