--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,15 +81,18 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
+    write_to:       "%kernel.root_dir%/../web"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [AmlWebBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        yui_css:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        yui_js:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
 
 # Doctrine Configuration
 doctrine:
@@ -129,7 +132,7 @@ services:
         class: Twig_Extensions_Extension_Intl
         tags:
            - { name: twig.extension }
-           
+
     debug.twig.extension:
         class: Twig_Extensions_Extension_Debug
         tags: [{ name: 'twig.extension' }]
