--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -10,10 +10,6 @@ imports:
 monolog:
     handlers:
         main:
-            type:         fingers_crossed
-            action_level: error
-            handler:      nested
-        nested:
-            type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
-            level: debug
+            type:   rotating_file
+            path:   "%kernel.logs_dir%/%kernel.environment%.log"
+            level:   debug
