--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "genemu/form-bundle": "2.2.*",
 		"sonata-project/intl-bundle": "dev-master",
 		"sonata-project/cache-bundle": "dev-master",
-        "knplabs/knp-menu-bundle": "~1.1",
+        "knplabs/knp-menu-bundle": "2.0.*",
         "sonata-project/exporter": "1.*",
         "sonata-project/block-bundle": "dev-master",
         "sonata-project/doctrine-orm-admin-bundle":"dev-master",
