--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+tools_google_analytics:
+    resource: "@ToolsGoogleAnalyticsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 aml_url_rewrite:
     resource: "@AmlUrlRewriteBundle/Resources/config/routing.yml"
     prefix:   /
