--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,6 +19,8 @@ sonata_block:
         sonata.block.service.text:
         sonata.block.service.rss:
         sonata.admin.block.search_result:
+        sonata.block.service.contact_us_messages:
+
 
 sonata_admin:
     title:      AML87
@@ -44,22 +46,13 @@ sonata_admin:
 
     dashboard:
         blocks:
-            # display a dashboard block
-            #- { position: left, type: sonata.admin.block.admin_list }
-             -
-                position: right
-                type: sonata.admin.block.admin_list
-             -
-                position: left
-                type: sonata.block.service.text
-                settings:
-                  content: >
-                    <h2>Bienvenue sur la page d'administration du site</h2>
-                    <p>This is a <code>sonata.block.service.text</code> from the Block
-                    Bundle, you can create and add new block in these area by configuring
-                    the <code>sonata_admin</code> section.</p> <br /> For instance, here
-                    a RSS feed parser (<code>sonata.block.service.rss</code>):
-
+            - { position: right, type: sonata.admin.block.admin_list }
+            - { position: left, type: sonata.block.service.text, settings: { content: '<div class="box"><div class="box-header with-border"><h2>Bienvenue !</h2></div><div class="box-body">Bienvenue dans la partie administrable du site.</div></div>'} }
+            - { position: left, type: sonata.block.service.contact_us_messages }
+            #- { position: center, type: sonata.timeline.block.timeline, settings: { context: SONATA_ADMIN, max_per_page: 25 }}
+            #- { position: right, type: sonata.news.block.recent_posts, settings: { title: Recent Posts, number: 7, mode: admin }}
+            #- { position: right, type: sonata.news.block.recent_comments, settings: { title: Recent Comments, number: 7, mode: admin }}
+            #- { position: right, type: sonata.block.service.rss, settings: { title: Sonata Project's Feeds, url: http://sonata-project.org/blog/archive.rss }}
 
 framework:
     #esi:             ~
