--- a/src/Aml/Bundle/UsersBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/UsersBundle/Resources/config/admin.yml
@@ -3,7 +3,7 @@ services:
     sonata.admin.users:
         class: Aml\Bundle\UsersBundle\Admin\UsersAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: users, label: "Members" }
+            - { name: sonata.admin, manager_type: orm, group: Administration, label: "Membres" }
         arguments:
             - ~
             - Aml\Bundle\UsersBundle\Entity\User
