--- a/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/WebBundle/Resources/config/admin.yml
@@ -3,7 +3,7 @@ services:
     sonata.admin.link:
         class: Aml\Bundle\WebBundle\Admin\LinkAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Liens" }
+            - { name: sonata.admin, manager_type: orm, group: "Autres contenus", label: "Liens" }
         arguments:
             - ~
             - Aml\Bundle\WebBundle\Entity\Link
@@ -14,7 +14,7 @@ services:
     sonata.admin.page:
         class: Aml\Bundle\WebBundle\Admin\PageAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Page" }
+            - { name: sonata.admin, manager_type: orm, group: "Autres contenus", label: "Page" }
         arguments:
             - ~
             - Aml\Bundle\WebBundle\Entity\Page
@@ -25,21 +25,10 @@ services:
     sonata.admin.partner:
         class: Aml\Bundle\WebBundle\Admin\PartenaireAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Partenaires" }
+            - { name: sonata.admin, manager_type: orm, group: "Autres contenus", label: "Partenaires" }
         arguments:
             - ~
             - Aml\Bundle\WebBundle\Entity\Partenaire
             - 'SonataAdminBundle:CRUD'
         calls:
             - [ setTranslationDomain, [AmlWebBundle]]
-
-    sonata.admin.contactus:
-            class: Aml\Bundle\ContactUsBundle\Admin\MessageAdmin
-            tags:
-                - { name: sonata.admin, manager_type: orm, group: Contenus, label: "Formulaire de contact" }
-            arguments:
-                - ~
-                - Aml\Bundle\ContactUsBundle\Entity\Message
-                - 'SonataAdminBundle:CRUD'
-            calls:
-                - [ setTranslationDomain, [AmlContactUsBundle]]
