--- a/src/Aml/Bundle/DiscographyBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/config/services.yml
@@ -5,3 +5,10 @@ services:
 #    aml_discography.example:
 #        class: %aml_discography.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+    aml_discography.sitemap.generate:
+        class: Aml\Bundle\DiscographyBundle\EventListener\SitemapListener
+        arguments:
+            container: "@service_container"
+        tags:
+            - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
+
