--- a/web/.htaccess
+++ b/web/.htaccess
@@ -82,15 +82,7 @@
 # | ETags                                                                      |
 # ------------------------------------------------------------------------------
 
-# Remove `ETags` as resources are sent with far-future expires headers.
-# https://developer.yahoo.com/performance/rules.html#etags
-
-# `FileETag None` doesn't work in all cases.
-<IfModule mod_headers.c>
-    Header unset ETag
-</IfModule>
-
-FileETag None
+FileETag MTime Size
 
 # ------------------------------------------------------------------------------
 # | Expires headers                                                            |
