#95: [UsersBundle] create area for membres

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -12,4 +12,4 @@ monolog:
         main:
             type:   rotating_file
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
-            level:   debug
+            level:   error
