--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,7 @@ twig:
     form:
           resources:
               - 'SonataCoreBundle:Form:datepicker.html.twig'
+              - 'bootstrap_3_layout.html.twig'
 
 # Assetic Configuration
 assetic:
@@ -239,6 +240,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Aml\Bundle\UsersBundle\Entity\User
+    profile:
+        form:
+            type: aml_user_profile
 
 knp_menu:
     providers:
