--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -44,4 +44,6 @@ security:
          - { path: ^/register, role: ROLE_SUPER_ADMIN }
          - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/admin/, role: ROLE_SUPER_ADMIN }
+         - { path: ^/espace-membres/, role: [ROLE_ADMIN,ROLE_SUPER_ADMIN,IS_AUTHENTICATED_REMEMBERED] }
          - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
