--- a/src/Aml/Bundle/MediasBundle/Resources/config/admin.yml
+++ b/src/Aml/Bundle/MediasBundle/Resources/config/admin.yml
@@ -29,7 +29,7 @@ services:
             - { name: sonata.admin, manager_type: orm, group: Medias, label: "Videos" }
         arguments:
             - ~
-            - Aml\Bundle\MediasBundle\Entity\Video
+            - Aml\Bundle\MediasBundle\Entity\Video\Youtube
             - 'SonataAdminBundle:CRUD'
         calls:
             - [ setTranslationDomain, [AmlMediasBundle]]
