--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+tools_youtube_api:
+    resource: "@ToolsYoutubeApiBundle/Resources/config/routing.yml"
+    prefix:   /
+
 tools_google_analytics:
     resource: "@ToolsGoogleAnalyticsBundle/Resources/config/routing.yml"
     prefix:   /
