--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "",
     "minimum-stability": "dev",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": { "": "src/" },
+        "google": ["vendor/google/apiclient/src"]
     },
     "require": {
         "php": ">=5.3.8",
@@ -33,7 +34,8 @@
         "sonata-project/doctrine-orm-admin-bundle":"dev-master",
         "sonata-project/admin-bundle":"dev-master",
         "sonata-project/core-bundle":"dev-master",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "google/apiclient": "1.1.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
